Fix overlap issue

--- a/client/extensions/woocommerce/woocommerce-services/views/shipping-label/label-purchase-modal/packages-step/style.scss
+++ b/client/extensions/woocommerce/woocommerce-services/views/shipping-label/label-purchase-modal/packages-step/style.scss
@@ -117,11 +117,13 @@
 .packages-step__package-items-header-weight {
 	width: 15%;
 	display: inline-block;
+	text-align: center;
 }
 
 .packages-step__package-items-header-qty {
 	width: 15%;
 	display: inline-block;
+	text-align: center;
 }
 
 .packages-step__package-items-header-move {
@@ -146,11 +148,13 @@
 .packages-step__item-weight {
 	padding: 8px 0;
 	width: 15%;
+	text-align: center;
 }
 
 .packages-step__item-qty {
 	padding: 8px 0;
 	width: 15%;
+	text-align: center;
 }
 
 .packages-step__item-move {
